--- a/src/app/layouts/guest/components/login/login.component.html
+++ b/src/app/layouts/guest/components/login/login.component.html
@@ -1,4 +1,6 @@
-<h2>login</h2>
-<input type="text" placeholder="email">
-<input type="password" placeholder="pass">
-<button (click)="login()">Login</button>
+<form [formGroup]="form">
+  <h2>login</h2>
+  <input type="text" placeholder="email" formControlName="email">
+  <input type="password" placeholder="pass" formControlName="pass">
+  <button (click)="login()">Login</button>
+</form>
