--- a/src/app/layouts/guest/guest.component.html
+++ b/src/app/layouts/guest/guest.component.html
@@ -1,9 +1,15 @@
-<p>guest works!</p>
-<div>
-  <app-login>
-  </app-login>
-</div>
+<app-header>
+  header in auth
+</app-header>
 
-<div>
-  <app-register></app-register>
-</div>
+
+<app-page>
+  <div>
+    <app-login>
+    </app-login>
+  </div>
+
+  <div>
+    <app-register></app-register>
+  </div>
+</app-page>
