--- a/src/app/layouts/components/header/header.component.scss
+++ b/src/app/layouts/components/header/header.component.scss
@@ -7,3 +7,10 @@
   display: block;
   background: grey;
 }
+.header-box{
+  display: flex;
+  align-items: center;
+  .logo{
+    margin-right: 16px;
+  }
+}
