--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,3 +1,5 @@
+@import "~ng-pick-datetime/assets/style/picker.min.css";
+
 img {
   max-width: 100%; /* This rule is very important, please do not ignore this! */
 }
@@ -38,4 +40,8 @@ ul{
   li{
     list-style: none;
   }
+}
+h1,h2,h3,h4,h5,h6,p{
+  margin: 0;
+  padding: 0;
 }
