--- a/src/app/layouts/pages/projects/pages/project/project.component.html
+++ b/src/app/layouts/pages/projects/pages/project/project.component.html
@@ -1,4 +1,4 @@
-<div class="project-info">
+<div class="project-info" [ngClass]="{'owner': storageService.user._id === project.owner._id}">
   <h1>{{project.name}}</h1>
   <p>Owner: {{project.owner.nickname}}</p>
 </div>
@@ -9,7 +9,8 @@
       <input type="text" placeholder="Name of task" formControlName="name">
       <input type="text" [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Start" formControlName="start">
       <owl-date-time #dt1></owl-date-time>
-      <input type="text" placeholder="End" formControlName="end">
+      <input type="text" [owlDateTime]="dt2" [owlDateTimeTrigger]="dt2" placeholder="End" formControlName="end">
+      <owl-date-time #dt2></owl-date-time>
       <div class="add-btn">
         <button (click)="openAddBox = false">Cancel</button>
         <button (click)="addTask()">Create task</button>
@@ -18,13 +19,29 @@
   </form>
 </div>
 <ul *ngIf="!loading" class="task-list">
-  <li *ngFor="let task of project.tasks.reverse()">
-    <h2>{{task.name}}</h2>
-    <p>Created by: {{task.owner.nickname}}</p>
-    <br>
-    <p>Start:</p>
-    <p>End:</p>
-    <h4>Total:</h4>
+  <li *ngFor="let task of project.tasks; let i = index">
+    <div class="task-main">
+      <h2>{{task.name}}</h2>
+      <p>Created by: {{task.owner.nickname}}</p>
+      <br>
+      <div *ngIf="task.timers.length">
+        <div>
+          <p *ngFor="let time of task.timers">
+            Start: {{time.start}} || End: {{time.end}}
+          </p>
+        </div>
+        <h4>Total:</h4>
+      </div>
+    </div>
+    <div class="task-timer">
+      <div class="time">
+        00:00
+      </div>
+      <div class="control">
+        <button *ngIf="!currentTimer" (click)="startTimer(task._id, i)">start</button>
+        <button *ngIf="currentTimer && currentTimer.taskIndex === i" (click)="stopTimer(task._id, i)">stop</button>
+      </div>
+    </div>
   </li>
 </ul>
 
