--- a/src/app/layouts/pages/projects/pages/project/project.component.scss
+++ b/src/app/layouts/pages/projects/pages/project/project.component.scss
@@ -1,12 +1,19 @@
-.project-info{
+.project-info {
   padding: 16px;
-  border: 1px solid black;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
   margin-bottom: 8px;
-  h1{
+  background: white;
+
+  &.owner {
+    border: 1px solid gold;
+  }
+
+  h1 {
     margin: 0;
     margin-bottom: 8px;
   }
 }
+
 .add-project-box {
   display: flex;
   background: grey;
@@ -15,6 +22,7 @@
   align-items: center;
   justify-content: center;
   flex-flow: column;
+
   span {
     display: flex;
     cursor: pointer;
@@ -53,14 +61,17 @@
     align-items: center;
     justify-content: center;
     padding: 0;
-    .add-btn{
+
+    .add-btn {
       display: flex;
       justify-content: space-between;
       flex-flow: wrap;
-      button{
+
+      button {
         width: 45%;
       }
     }
+
     input {
       padding: 8px;
       font-size: 16px;
@@ -77,13 +88,22 @@
     }
   }
 }
-.task-list{
-  li{
+
+.task-list {
+  li {
     border-radius: 4px;
     display: flex;
-    background: lightgrey;
+    background: white;
     margin: 8px 0;
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
     flex-flow: column;
     padding: 8px;
+    flex-flow: wrap;
+justify-content: space-between;
+    .task-main {
+    }
+
+    .task-timer {
+    }
   }
 }
