--- a/src/app/layouts/pages/projects/projects.component.scss
+++ b/src/app/layouts/pages/projects/projects.component.scss
@@ -94,7 +94,7 @@ align-items: center;
         flex-flow: column;
         color: #131313;
         &.owner{
-          border:1px solid gold
+          border:1px solid #ffd700
         }
         &:hover {
           box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
