--- a/src/app/layouts/pages/projects/pages/project/project.component.html
+++ b/src/app/layouts/pages/projects/pages/project/project.component.html
@@ -21,25 +21,27 @@
 <ul *ngIf="!loading" class="task-list">
   <li *ngFor="let task of project.tasks; let i = index">
     <div class="task-main">
-      <h2>{{task.name}}</h2>
-      <p>Created by: {{task.owner.nickname}}</p>
-      <br>
-      <div *ngIf="task.timers.length">
+      <div class="task-main__header">
         <div>
-          <p *ngFor="let time of task.timers">
-            Start: {{time.start}} || End: {{time.end}}
-          </p>
+          <h2>{{task.name}}</h2>
+          <p>Created by: {{task.owner.nickname}}</p>
         </div>
-        <h4>Total:</h4>
+        <div>
+          <button (click)="deleteTask(task,i)">Delete</button>
+        </div>
+      </div>
+      <br>
+      <div *ngIf="task.total">
+        <h4>Total:  {{getTime(task.total)}}</h4>
       </div>
     </div>
-    <div class="task-timer">
+    <div class="task-timer" *ngIf="task.timerStarted || !currentTimer">
       <div class="time">
-        00:00
+        {{timerNow}}
       </div>
       <div class="control">
-        <button *ngIf="!currentTimer" (click)="startTimer(task._id, i)">start</button>
-        <button *ngIf="currentTimer && currentTimer.taskIndex === i" (click)="stopTimer(task._id, i)">stop</button>
+        <button *ngIf="!task.timerStarted" (click)="startTimer(task,i)">start</button>
+        <button *ngIf="task.timerStarted" (click)="stopTimer(task,i)">stop</button>
       </div>
     </div>
   </li>
