--- a/src/app/layouts/pages/projects/pages/project/project.component.scss
+++ b/src/app/layouts/pages/projects/pages/project/project.component.scss
@@ -101,6 +101,9 @@
     flex-flow: wrap;
 justify-content: space-between;
     .task-main {
+      .task-main__header{
+        display: flex;
+      }
     }
 
     .task-timer {
