--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "~ng-pick-datetime/assets/style/picker.min.css";
+@import '~ngx-toastr/toastr';
 
 img {
   max-width: 100%; /* This rule is very important, please do not ignore this! */
