--- a/src/app/layouts/pages/projects/pages/project/project.component.scss
+++ b/src/app/layouts/pages/projects/pages/project/project.component.scss
@@ -27,6 +27,7 @@
     display: flex;
     cursor: pointer;
     width: 100%;
+    z-index: 33;
     height: 47px;
     font-size: 40px;
     text-align: center;
@@ -54,7 +55,6 @@
     display: flex;
     opacity: 0;
     height: 0;
-    overflow: hidden;
     transition: 300ms;
     width: 100%;
     flex-flow: column;
