--- a/src/app/layouts/pages/projects/pages/project/project.component.scss
+++ b/src/app/layouts/pages/projects/pages/project/project.component.scss
@@ -46,7 +46,7 @@
     }
 
     .add-wrapper {
-      height: 440px;
+      height: 240px;
       opacity: 1;
     }
   }
@@ -57,6 +57,7 @@
     height: 0;
     transition: 300ms;
     width: 100%;
+    overflow: hidden;
     flex-flow: column;
     align-items: center;
     justify-content: center;
