--- a/src/app/layouts/components/chart/chart.component.html
+++ b/src/app/layouts/components/chart/chart.component.html
@@ -1,7 +1,8 @@
-===
-<canvas baseChart
-        [data]="doughnutChartData"
-        [labels]="doughnutChartLabels"
-        [chartType]="doughnutChartType">
-</canvas>
----
+<div *ngIf="chartData.length && chartLabels.length">
+  <canvas baseChart
+          [data]="chartData"
+          [labels]="chartLabels"
+          [options]="chartOptions"
+          [chartType]="doughnutChartType">
+  </canvas>
+</div>
