--- a/src/app/layouts/pages/statistics/statistics.component.html
+++ b/src/app/layouts/pages/statistics/statistics.component.html
@@ -1,9 +1,10 @@
-<app-chart></app-chart>
+<app-chart [chartData]="chartData" [chartLabels]="chartLabels"></app-chart>
 <h3>All task where you Worker</h3>
 <ul>
   <li *ngFor="let task of tasks">
-<!--    {{task|json}}-->
-    {{task.name}} : {{this.getTime(task.total)}} <span *ngIf="task.timerStarted" style="color:red">The timer is on!</span>
+    <!--    {{task|json}}-->
+    {{task.name}} : {{this.getTime(task.total)}}
+    <span *ngIf="task.timerStarted" style="color:red">The timer is on!</span>
   </li>
 </ul>
 
