--- a/src/app/layouts/pages/statistics/statistics.component.html
+++ b/src/app/layouts/pages/statistics/statistics.component.html
@@ -1,11 +1,18 @@
-<app-chart [chartData]="chartData" [chartLabels]="chartLabels"></app-chart>
-<h3>All task where you Worker</h3>
-<ul>
-  <li *ngFor="let task of tasks">
-    <!--    {{task|json}}-->
-    {{task.name}} : {{this.getTime(task.total)}}
-    <span *ngIf="task.timerStarted" style="color:red">The timer is on!</span>
-  </li>
-</ul>
-
-
+<div>
+  <button (click)="getStatsWithAverage('day')">Day</button>
+  <button (click)="getStatsWithAverage('week')">Week</button>
+  <button (click)="getStatsWithAverage('months')">Months</button>
+  <button (click)="getStatsWithAverage()">All time</button>
+</div>
+<div *ngIf="!loading;else loadingData">
+  <app-chart [chartData]="chartData" [chartLabels]="chartLabels"></app-chart>
+  <h3>All task where you Worker</h3>
+  <ul>
+    <li *ngFor="let task of tasks">
+      <!--    {{task|json}}-->
+      {{task.name}} : {{this.getTime(task.total)}}
+      <span *ngIf="task.timerStarted" style="color:red">The timer is on!</span>
+    </li>
+  </ul>
+</div>
+<ng-template #loadingData>Loading data</ng-template>
