some update + init socket messages

--- a/src/app/layouts/components/header/header.component.html
+++ b/src/app/layouts/components/header/header.component.html
@@ -10,7 +10,7 @@
           <a [routerLink]="['/messages']">Messages</a>
           <a [routerLink]="['/statistics']">Statistics</a>
         </div>
-        <button (click)="storageService.logout()">Logout</button>
+        <button (click)="logout()">Logout</button>
       </div>
     </div>
   </div>
