--- a/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
+++ b/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
@@ -15,11 +15,15 @@
   </ul>
   <ng-template #searchList>
     <ul class="search-list" *ngIf="!searchIsEmpty">
-      <li *ngFor="let room of usersSearch" (click)="selectRoom(room)">
+      <li *ngFor="let user of usersSearch" (click)="selectUser(user)">
         <div class="room-avatar">
           <span class="avatar"></span>
         </div>
-        <span class="room-name">{{room.name}}</span>
+        <span class="room-name">
+          {{user.nickname}}
+          <br>
+          {{user.email}}
+        </span>
       </li>
     </ul>
   </ng-template>
