--- a/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
+++ b/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
@@ -6,11 +6,11 @@
 <div class="list">
   <ul class="rooms-list" *ngIf="searchIsEmpty; else searchList">
     <li *ngFor="let room of rooms" (click)="selectRoom(room)"
-        [class.selected]="room.name===currentRoom?.name">
+        [class.selected]="room._id===currentRoom?._id">
       <div class="room-avatar">
         <span class="avatar"></span>
       </div>
-      <span class="room-name">{{room.name}}</span>
+      <span class="room-name">{{getRoomName(room)}}</span>
     </li>
   </ul>
   <ng-template #searchList>
