--- a/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
+++ b/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
 <div class="list">
   <ul class="rooms-list" *ngIf="searchIsEmpty; else searchList">
     <li *ngFor="let room of rooms" (click)="selectRoom(room)"
-        [class.selected]="room._id===currentRoom?._id">
+        [class.selected]="room._id===currentRoom?._id" [class.newmess]="room.newMess">
       <div class="room-avatar">
         <span class="avatar"></span>
       </div>
