--- a/src/app/layouts/pages/messages/components/sidebar/sidebar.component.scss
+++ b/src/app/layouts/pages/messages/components/sidebar/sidebar.component.scss
@@ -22,6 +22,9 @@
     display: flex;
     padding: 8px;
     cursor: pointer;
+    &.newmess{
+      border:1px solid red
+    }
     &.selected{
       background: slategray;
       &:hover{
