--- a/src/app/layouts/pages/messages/components/sidebar/sidebar.component.scss
+++ b/src/app/layouts/pages/messages/components/sidebar/sidebar.component.scss
@@ -22,7 +22,7 @@
     display: flex;
     padding: 8px;
     cursor: pointer;
-    &.newmess{
+    &.newMess{
       border:1px solid red
     }
     &.selected{
