--- a/src/app/layouts/components/header/header.component.scss
+++ b/src/app/layouts/components/header/header.component.scss
@@ -1,3 +1,5 @@
+@import "~src/assets/scss/variables";
+
 :host {
   position: fixed;
   top: 0;
@@ -5,14 +7,52 @@
   width: 100%;
   height: 60px;
   display: block;
-  background: grey;
+  background: $black;
+}
+
+.header {
+  height: 100%;
+  display: flex;
 }
 
 .header-box {
   display: flex;
   align-items: center;
+  height: 100%;
 
   .logo {
-    margin-right: 16px;
+    margin-right: 24px;
+    a{
+      color: $blue;
+      font-family: $fontTeko;
+      text-decoration: none;
+      font-size: 36px;
+      transition: 300ms;
+
+    }
   }
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.menu-links {
+  a {
+    margin: 0 16px;
+    color: $white;
+    text-decoration: none;
+    transition: 300ms;
+    &:hover{
+      color:$gold
+    }
+  }
+}
+
+.user-settings {
+
 }
