--- a/src/app/layouts/pages/home/components/register/register.component.html
+++ b/src/app/layouts/pages/home/components/register/register.component.html
@@ -1,8 +1,8 @@
-<h2>register</h2>
 <form [formGroup]="form">
-  <input type="text" placeholder="email" formControlName="email">
-  <input type="text" placeholder="nickname" formControlName="nickname">
-  <input type="password" placeholder="pass" formControlName="pass">
-  <button (click)="register()">Register</button>
+  <h3>Register</h3>
+  <input class="input" type="text" placeholder="Email..." formControlName="email">
+  <input class="input" type="text" placeholder="Nickname..." formControlName="nickname">
+  <input class="input" type="password" placeholder="Password..." formControlName="pass">
+  <button class="btn btn--hover-blue" (click)="register()">Register</button>
 </form>
 
