--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<app-header></app-header>
-<app-page>
-  <router-outlet></router-outlet>
-</app-page>
-
+<div class="main">
+  <app-header></app-header>
+  <app-page>
+    <router-outlet></router-outlet>
+  </app-page>
+</div>
 
