--- a/src/app/layouts/pages/projects/projects.component.scss
+++ b/src/app/layouts/pages/projects/projects.component.scss
@@ -1,3 +1,5 @@
+@import "~src/assets/scss/variables";
+
 :host {
   padding-top: 16px;
   display: block;
@@ -5,37 +7,49 @@
 
 .add-project-box {
   display: flex;
-  background: grey;
+  background: $darkgrey;
   min-height: 60px;
   position: relative;
-  align-items: center;
-  justify-content: center;
   flex-flow: column;
+  border-radius: 2px;
 
-  span {
+  h3 {
     display: flex;
     cursor: pointer;
     width: 100%;
-    height: 47px;
-    font-size: 40px;
     text-align: center;
-    font-weight: 600;
-    color: #131313;
+    padding-top: 0;
+    color: $white;
     transition: 300ms;
-    align-items: center;
     opacity: 1;
     justify-content: center;
+    letter-spacing: 2px;
+    height: 100%;
+    min-height: 60px;
+    align-items: center;
+z-index: 3;
+    &:hover {
+      color: $black;
+      background: $gold;
+    }
   }
 
   &.add-project-box--open {
-    span {
-      height: 0;
-      opacity: 0;
+    h3 {
+      color: $black;
+      cursor: auto;
+      background: $gold;
+      z-index: 3;
+    }
+
+    form {
+      z-index: 2;
     }
 
     .add-wrapper {
-      height: 160px;
+      height: 120px;
       opacity: 1;
+
     }
   }
 
@@ -43,38 +57,25 @@
     display: flex;
     opacity: 0;
     height: 0;
-    overflow: hidden;
     transition: 300ms;
-    width: 100%;
+    width: 240px;
     flex-flow: column;
-    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
     justify-content: center;
-    padding: 0;
 
     .add-btn {
       display: flex;
       justify-content: space-between;
       flex-flow: wrap;
+      width: 100%;
 
-      button {
-        width: 45%;
-      }
     }
 
     input {
-      padding: 8px;
-      font-size: 16px;
-      margin-bottom: 16px;
-      width: 200px;
+      font-size: 20px;
     }
 
-    button {
-      background: white;
-      font-size: 16px;
-      border-radius: 4px;
-      padding: 8px 16px;
-      border: 0;
-    }
   }
 }
 
@@ -120,3 +121,5 @@
     }
   }
 }
+
+
