--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -3,6 +3,7 @@ $fontTeko: 'Teko', sans-serif;
 
 $shadow:0px 0px 2px 0px rgba(0, 0, 0, 0.75);
 
+$superblack: #0b0b0b;
 $black: #292929;
 $blue: #00caec;
 $white: #f0f0f0;
