--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,14 @@
-.main{
+.main {
   overflow-x: hidden;
+
+
+  .main-loader {
+    margin-top: 60px;
+    min-height: calc(100vh - 60px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
 }
