--- a/src/app/layouts/pages/home/home.component.scss
+++ b/src/app/layouts/pages/home/home.component.scss
@@ -53,9 +53,9 @@
     position: absolute;
     background: $superblack;
     z-index: 0;
-    width: 100vw;
+    width: 200vw;
     height: 100%;
-    left: -12%;
+    left: -70vw;
   }
 
   .content {
