--- a/src/app/layouts/components/header/header.component.html
+++ b/src/app/layouts/components/header/header.component.html
@@ -11,6 +11,7 @@
           <a [routerLink]="['/statistics']">Statistics</a>
         </div>
         <div class="user-settings">
+          <a [routerLink]="['/settings']" class="user-avatar"></a>
           <button  class="btn" (click)="logout()">Logout</button>
         </div>
       </div>
