--- a/src/app/layouts/components/header/header.component.scss
+++ b/src/app/layouts/components/header/header.component.scss
@@ -55,5 +55,13 @@
 }
 
 .user-settings {
-
+display: flex;
+  align-items: center;
+  .user-avatar{
+    height: 40px;
+    width: 40px;
+    background: goldenrod;
+    border-radius: 50%;
+    margin-right: 16px;
+  }
 }
